feat: 이메일 인증방식 변경 #117 (#133)
* feat: 인증메일 전송 API 인증코드 반환 형식으로 변경 #117

* docs: swagger 적용 #117

* docs: swagger 결과물 추가 #117

* test: 메일 전송 API 테스트 비활성화 (추후 RestAssured로 재작성) #117
