# api/event/src/main/java/com/backtothefuture/event/controller/CertificateController.java
@@ -1,28 +1,35 @@
 package com.backtothefuture.event.controller;
 
+import static com.backtothefuture.domain.common.enums.GlobalSuccessCode.SUCCESS;
+
 import com.backtothefuture.domain.response.BfResponse;
+import com.backtothefuture.domain.response.ErrorResponse;
 import com.backtothefuture.event.dto.request.MailCertificateRequestDto;
-import com.backtothefuture.event.dto.request.VerifyCertificateRequestDto;
+import com.backtothefuture.event.dto.response.CertificateMailResponseDto;
 import com.backtothefuture.event.service.CertificateService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.ExampleObject;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.security.SecurityRequirements;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
+import java.util.Map;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.servlet.ModelAndView;
 
-import java.util.Map;
-
-import static com.backtothefuture.domain.common.enums.GlobalSuccessCode.CREATE;
-import static com.backtothefuture.domain.common.enums.GlobalSuccessCode.SUCCESS;
-
+@Tag(name = "certificate", description = "인증 API")
 @RestController
 @RequiredArgsConstructor
 @RequestMapping("/certificate")
@@ -46,31 +53,50 @@ public class CertificateController {
 //        return ResponseEntity.ok(new BfResponse<>(null));
 //    }
 
-    @PostMapping("/email")
-    public ResponseEntity<BfResponse<?>> sendCertificateMail(
+    @Operation(summary = "인증코드 메일 전송 API", description = "이메일로 인증코드를 전송합니다.")
+    @SecurityRequirements(value = {}) // no security
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "인증 번호 발송 성공", useReturnTypeSchema = true),
+            @ApiResponse(responseCode = "400", description = "이메일 형식에 맞지 않습니다.",
+                    content = @Content(
+                            mediaType = "application/json",
+                            schema = @Schema(implementation = ErrorResponse.class),
+                            examples = {
+                                    @ExampleObject(name = "invalid email", value = "{\"errorCode\": 400, \"errorMessage\": \"입력값에 대한 검증에 실패했습니다.\", \"validation\": {\"email\": \"이메일 형식에 맞지 않습니다.\"}}")
+                            }
+                    ))
+    })
+    @PostMapping(value = "/email", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+    public ResponseEntity<BfResponse<CertificateMailResponseDto>> sendCertificateMail(
             @Valid @RequestBody MailCertificateRequestDto mailCertificateRequestDto
     ) {
-        int mailExp = certificationService.sendEmailCertificateNumber(mailCertificateRequestDto);
+        CertificateMailResponseDto responseDto = certificationService.sendEmailCertificateNumber(
+                mailCertificateRequestDto);
 
         return ResponseEntity.ok()
-                .body(new BfResponse<>(SUCCESS, Map.of("mail_expiration_seconds", mailExp)));
+                .body(new BfResponse<>(SUCCESS, responseDto));
     }
 
-    // TODO: html 버튼, form 전송으로 변경할것
-    @GetMapping("/email")
-    public ModelAndView verifyCertificateMail(
-            @RequestParam String email,
-            @RequestParam String certificationNumber
+    @Operation(summary = "이메일 인증 번호 검증 API", description = "이메일과 인증 번호를 사용하여 인증 번호의 유효성을 검증합니다.")
+    @SecurityRequirements(value = {}) // no security
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "인증 번호 유효성 검사 결과", useReturnTypeSchema = true,
+                    content = @Content(
+                            mediaType = "application/json",
+                            examples = {
+                                    @ExampleObject(name = "valid certification number", value = "{\"code\": 200, \"message\": \"정상 처리되었습니다.\", \"data\": {\"isValid\": true}}"),
+                                    @ExampleObject(name = "invalid certification number", value = "{\"code\": 200, \"message\": \"정상 처리되었습니다.\", \"data\": {\"isValid\": false}}")
+                            }
+                    )
+            )
+    })
+    @GetMapping(value = "/email", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+    public ResponseEntity<BfResponse<?>> verifyMailCertificationNumber(
+            @Parameter(description = "이메일 주소", required = true) @RequestParam String email,
+            @Parameter(description = "인증 번호", required = true) @RequestParam String certificationNumber
     ) {
-        certificationService.verifyCertificateEmailNumber(email, certificationNumber);
-        // 인증 성공 시 성공 페이지를 반환
-        ModelAndView successModelAndView = new ModelAndView("mail/verify-success");
-        return successModelAndView;
-    }
-
-    @GetMapping("/email/{email}/status")
-    public ResponseEntity<BfResponse<?>> checkCertificateEmailStatus(@PathVariable String email) {
+        boolean isValid = certificationService.verifyCertificateEmailNumber(email, certificationNumber);
         return ResponseEntity.ok()
-                .body(new BfResponse<>(SUCCESS, Map.of("is_certificated", certificationService.getCertificateEmailStatus(email))));
+                .body(new BfResponse<>(SUCCESS, Map.of("isValid", isValid)));
     }
 }
